--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,21 @@
 # You must generate your own secret key for Django/DRF and keep it secret. Do NOT commit it to GitHub.
 DJANGO_SECRET_KEY=your-secret-key-here
 
+# Security & Cross-Domain Configuration
 ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ALLOW_CREDENTIALS=True
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:5500,http://127.0.0.1:8000
 CSRF_TRUSTED_ORIGINS=http://127.0.0.1:5500,http://127.0.0.1:8000
+
+# Email / SMTP Configuration
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST=your-domain.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email
+DEFAULT_FROM_EMAIL="Videoflix No-Reply <noreply@your-domain.com>"
+EMAIL_HOST_PASSWORD=your-email-account-password
+
+# After successful registration, an activation email will be sent.
+# Please note that the link redirects to the front-end page.
+ACTIVATE_ACCOUNT_LINK=http://localhost:5500/pages/auth/activate.html
