--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,11 @@ EMAIL_HOST_PASSWORD=your-email-account-password
 
 # After successful registration, an activation email will be sent.
 # Please note that the link redirects to the front-end page.
-ACTIVATE_ACCOUNT_LINK=http://localhost:5500/pages/auth/activate.html
+ACTIVATE_ACCOUNT_LINK=http://127.0.0.1:5500/pages/auth/activate.html
+
+# PostgreSQL setup
+PG_DB=your-database-name
+PG_USER=your-database-username
+PG_PASSWORD=your-database-password
+PG_HOST=localhost
+PG_PORT=5432
