feat(auth): password confirm endpoint
feat: .env.example
refactor

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ EMAIL_HOST_PASSWORD=your-email-account-password
 # After successful registration, an activation email will be sent.
 # Please note that the link redirects to the front-end page.
 ACTIVATE_ACCOUNT_LINK=http://127.0.0.1:5500/pages/auth/activate.html
+# After entering the email address, a password reset email will be sent to the user.
+# Please note that the link redirects to the front-end page.
+PASSWORD_RESET_LINK=http://127.0.0.1:5500/pages/auth/confirm_password.html
 
 # PostgreSQL setup
 PG_DB=your-database-name
