--- a/.env.template
+++ b/.env.template
@@ -1,30 +1,20 @@
 # It creates a superuser automatically if it does not exist
-DJANGO_SUPERUSER_USERNAME=admin
-# -------------------------------------
-DJANGO_SUPERUSER_PASSWORD=adminpassword
-# -------------------------------------
-DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_USERNAME=<admin>
+DJANGO_SUPERUSER_PASSWORD=<adminpassword>
+DJANGO_SUPERUSER_EMAIL=<admin@example.com>
 
-
-# # Django secret key
-# # You must generate your own secret key for Django/DRF and keep it secret. Do NOT commit it to GitHub.
-# -----------------------------
-SECRET_KEY=your-secret-key-here
-# -----------------------------
+# You must generate your own secret key for Django/DRF and keep it secret. Do NOT commit it to GitHub.
+SECRET_KEY=<your-secret-key-here>
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 CSRF_TRUSTED_ORIGINS=http://localhost:5500,http://127.0.0.1:8000
 
-
 # PostgreSQL setup
-DB_NAME=your_database_name
-DB_USER=your_database_user
-# --------------------------------
-DB_PASSWORD=your_database_password
-# --------------------------------
+DB_NAME=<your_database_name>
+DB_USER=<your_database_user>
+DB_PASSWORD=<your_database_password>
 DB_HOST=db
 DB_PORT=5432
-
 
 # Redis setup
 REDIS_HOST=redis
@@ -32,29 +22,24 @@ REDIS_LOCATION=redis://redis:6379/1
 REDIS_PORT=6379
 REDIS_DB=0
 
-
-# # Email / SMTP Configuration
-EMAIL_HOST=smtp.example.com
+# Email / SMTP Configuration
+EMAIL_HOST=<smtp.example.com>
 EMAIL_PORT=587
-EMAIL_HOST_USER=your_email_user
-# ------------------------------------------
-EMAIL_HOST_PASSWORD=your_email_user_password
-# ------------------------------------------
+EMAIL_HOST_USER=<your_email_user>
+EMAIL_HOST_PASSWORD=<your_email_user_password>
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
 DEFAULT_FROM_EMAIL='Videoflix No-Reply <noreply@your-domain.com>'
 
 
-# ---------------------- my additional variables ----------------------
+# --- my additional variables ---
 
 # Email / SMTP Configuration
 CORS_ALLOW_CREDENTIALS=True
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:5500,http://127.0.0.1:8000
 
-
 # Email / SMTP Configuration
 EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
-
 
 # After successful registration, an activation email will be sent.
 # Please note that the link redirects to the front-end page.
